# StockTrader

./: CMakeLists.txt  README.md
include/: json.h  library.h  meta.h  stockReader.h
src/: CMakeLists.txt  json_test.cpp  library_test.cpp  meta_test.cpp  stockReader_test.cpp
stock-data/: ALKB.json  CARLA.json  PAALB.json  SCHO.json  SPNO.json
